--- a/Kyphosis_Disease_Prediction.ipynb
+++ b/Kyphosis_Disease_Prediction.ipynb
@@ -18,120 +18,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "id": "107c9e63-860a-4323-96ba-b9f0ffa2f3e5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting torch\n",
-      "  Downloading torch-2.1.0-cp38-cp38-win_amd64.whl (192.3 MB)\n",
-      "Requirement already satisfied: typing-extensions in c:\\users\\real\\desktop\\venv_prj\\lib\\site-packages (from torch) (4.8.0)\n",
-      "Collecting networkx\n",
-      "  Downloading networkx-3.1-py3-none-any.whl (2.1 MB)\n",
-      "Collecting sympy\n",
-      "  Downloading sympy-1.12-py3-none-any.whl (5.7 MB)\n",
-      "Requirement already satisfied: jinja2 in c:\\users\\real\\desktop\\venv_prj\\lib\\site-packages (from torch) (3.1.2)\n",
-      "Collecting filelock\n",
-      "  Downloading filelock-3.12.4-py3-none-any.whl (11 kB)\n",
-      "Collecting fsspec\n",
-      "  Downloading fsspec-2023.9.2-py3-none-any.whl (173 kB)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\real\\desktop\\venv_prj\\lib\\site-packages (from jinja2->torch) (2.1.3)\n",
-      "Collecting mpmath>=0.19\n",
-      "  Downloading mpmath-1.3.0-py3-none-any.whl (536 kB)\n",
-      "Installing collected packages: mpmath, sympy, networkx, fsspec, filelock, torch\n",
-      "Successfully installed filelock-3.12.4 fsspec-2023.9.2 mpmath-1.3.0 networkx-3.1 sympy-1.12 torch-2.1.0\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: You are using pip version 21.1.1; however, version 23.2.1 is available.\n",
-      "You should consider upgrading via the 'c:\\users\\real\\desktop\\venv_prj\\scripts\\python.exe -m pip install --upgrade pip' command.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pip install torch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "a0a78ffe-0638-4028-8576-fcaf3a43f3a3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting imblearn\n",
-      "  Downloading imblearn-0.0-py2.py3-none-any.whl (1.9 kB)\n",
-      "Collecting imbalanced-learn\n",
-      "  Downloading imbalanced_learn-0.11.0-py3-none-any.whl (235 kB)\n",
-      "Requirement already satisfied: scipy>=1.5.0 in c:\\users\\real\\desktop\\venv_prj\\lib\\site-packages (from imbalanced-learn->imblearn) (1.10.1)\n",
-      "Requirement already satisfied: numpy>=1.17.3 in c:\\users\\real\\desktop\\venv_prj\\lib\\site-packages (from imbalanced-learn->imblearn) (1.24.4)\n",
-      "Requirement already satisfied: joblib>=1.1.1 in c:\\users\\real\\desktop\\venv_prj\\lib\\site-packages (from imbalanced-learn->imblearn) (1.3.2)\n",
-      "Requirement already satisfied: scikit-learn>=1.0.2 in c:\\users\\real\\desktop\\venv_prj\\lib\\site-packages (from imbalanced-learn->imblearn) (1.3.1)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\real\\desktop\\venv_prj\\lib\\site-packages (from imbalanced-learn->imblearn) (3.2.0)\n",
-      "Installing collected packages: imbalanced-learn, imblearn\n",
-      "Successfully installed imbalanced-learn-0.11.0 imblearn-0.0\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: You are using pip version 21.1.1; however, version 23.2.1 is available.\n",
-      "You should consider upgrading via the 'c:\\users\\real\\desktop\\venv_prj\\scripts\\python.exe -m pip install --upgrade pip' command.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install imblearn"
+    "#pip install torch"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 57,
+   "id": "a0a78ffe-0638-4028-8576-fcaf3a43f3a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pip install imblearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "id": "12a2ff74-b517-429f-b68f-d8176fb93c60",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting xgboostNote: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: You are using pip version 21.1.1; however, version 23.2.1 is available.\n",
-      "You should consider upgrading via the 'c:\\users\\real\\desktop\\venv_prj\\scripts\\python.exe -m pip install --upgrade pip' command.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  Downloading xgboost-2.0.0-py3-none-win_amd64.whl (99.7 MB)\n",
-      "Requirement already satisfied: numpy in c:\\users\\real\\desktop\\venv_prj\\lib\\site-packages (from xgboost) (1.24.4)\n",
-      "Requirement already satisfied: scipy in c:\\users\\real\\desktop\\venv_prj\\lib\\site-packages (from xgboost) (1.10.1)\n",
-      "Installing collected packages: xgboost\n",
-      "Successfully installed xgboost-2.0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pip install xgboost"
+    "#pip install xgboost"
    ]
   },
   {
